kuberentes/kubernetes-documents/Mesh Service/latest_istio/2. ns-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web                       # namespace name
  labels:
    istio-injection: enabled      # Automatically add a sidecar.
